# AirField

./: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml
CHANGELOG/: 0.1.0.md  0.2.0.md  0.3.0.md  0.3.1.md  0.4.0.md  0.5.0.md  0.5.1.md
docs/: api.md  index.md  installation.md  usage.md
examples/: admin_panel.py
src/airfield/: __init__.py  __main__.py  cli.py  main.py  types.py  utils.py
tests/: test_airfield.py
